--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~bootstrap-beta/dist/css/bootstrap.min.css";
+
+body {
+padding-top: 80px;
+}
+.template {
+padding: 3rem 1.5rem;
+text-align: center;
+}
